--- a/index.html
+++ b/index.html
@@ -18,40 +18,36 @@
     <div class="privacy-policy">
       <div class="privacy-policy__item">
         <p class="privacy-policy__item__title">
-          1. Acquisition of user information persons
+          1.ユーザー情報の取得について
         </p>
         <p class="privacy-policy__item__desc">
-          　This application does not acquire personal information of users
+          　本アプリケーションは、ユーザーの個人情報を取得することはありません
         </p>
       </div>
       <div class="privacy-policy__item">
-        <p class="privacy-policy__item__title">2. Use of user information</p>
+        <p class="privacy-policy__item__title">2.利用者情報の利用</p>
         <p class="privacy-policy__item__desc">
-          　This application will not use the user's personal information.
-        </p>
-      </div>
-      <div class="privacy-policy__item">
-        <p class="privacy-policy__item__title">
-          3. Provision of user information to third parties
-        </p>
-        <p class="privacy-policy__item__desc">
-          　This application will not provide user's personal information to any
-          　third party.
-        </p>
-      </div>
-      <div class="privacy-policy__item">
-        <p class="privacy-policy__item__title">4. Tools used</p>
-        <p class="privacy-policy__item__desc">
-          　This application uses AdMob (Google Inc.) as a distribution tool for
-          　advertisements, and AdMob may automatically acquire user
-          information. 　Please refer to the application privacy policy of the
-          ad-serving 　ompany for the information to be acquired, purpose of
-          use, provision 　to third parties, etc.
+          　本アプリケーションは、ユーザーの個人情報を利用することはありません。
         </p>
       </div>
       <div class="privacy-policy__item">
         <p class="privacy-policy__item__title">
-          5. For inquiries, please contact
+          3.個人情報の第三者への提供
+        </p>
+        <p class="privacy-policy__item__desc">
+          　本アプリは、お客様の個人情報を第三者に提供することはありません。
+        </p>
+      </div>
+      <div class="privacy-policy__item">
+        <p class="privacy-policy__item__title">4.使用ツール</p>
+        <p class="privacy-policy__item__desc">
+          　本アプリは、広告配信ツールとしてAdMob（Google Inc.）を利用しており、AdMobがユーザー情報を自動的に取得する場合があります。 　
+          取得する情報、利用目的、第三者への提供等については、広告配信事業者のアプリケーションプライバシーポリシーをご参照ください。
+        </p>
+      </div>
+      <div class="privacy-policy__item">
+        <p class="privacy-policy__item__title">
+          5. お問い合わせ先
         </p>
         <p class="privacy-policy__item__desc">lolemsakkaku@gmail.com</p>
       </div>
